--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Release 0.1-1:
+  * Added cache benchmark plotter.
+
 Release 0.1-0:
 	* Fix papi and prof plots. Rename them for better interactive use.
 	* Add vignettes.
