--- a/vignettes/include/hpcvis.bib
+++ b/vignettes/include/hpcvis.bib
@@ -1,3 +1,11 @@
+@Manual{hpcvis,
+  title = {hpcvis: Plot Utilities for MPI Codes and Hardware Counters},
+  author = {Drew Schmidt and Wei-Chen Chen},
+  year = {2016}
+  note = {{R} package},
+  url = {http://r-pbd.org/},
+}
+
 @MISC{pbdR2012,
   author = {Ostrouchov, G. and Chen, W.-C. and Schmidt, D. and Patel, P.},
   title = {{Programming with Big Data in R}},
@@ -68,3 +76,10 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@Misc{pbdMPI,
+  title = {{pbdMPI}: Programming with Big Data -- Interface to {MPI}},
+  author = {Wei-Chen Chen and George Ostrouchov and Drew Schmidt and Pragneshkumar Patel and Hao Yu},
+  year = {2012},
+  note = {{R} Package, URL http://cran.r-project.org/package=pbdMPI},
+}
