--- a/vignettes/include/hpcvis.bib
+++ b/vignettes/include/hpcvis.bib
@@ -1,7 +1,7 @@
 @Manual{hpcvis,
   title = {hpcvis: Plot Utilities for MPI Codes and Hardware Counters},
   author = {Drew Schmidt and Wei-Chen Chen},
-  year = {2016}
+  year = {2016},
   note = {{R} package},
   url = {http://r-pbd.org/},
 }
