--- a/vignettes/counterplots.Rmd
+++ b/vignettes/counterplots.Rmd
@@ -32,21 +32,18 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-hpcvis offers utilities for benchmarking and visualizing profiler data from MPI profilers, as well as performance counter data from PAPI.
+In this vignette, we will introduce the facilities for visualizing hardware counter data, as generated from the **pbdPAPI** package [[@papipackage]].  Before proceeding, the reader is encouraged to start with the *Introducing hpcvis* vignette, which is distributed with the **hpcvis** package [[@hpcvis]].
 
-
-[[@pbdR2012]]
-[[@papipackage]]
-[[@papivignette]]
-[[@mucci1999papi]]
-
+In the examples, we will be using the `papiplot()` function to manage plotting.  Currently, only `pbdPAPI::system.cache()` and `pbdPAPI::cachebench()` generated data is supported.  Future versions will contain support for additional data.
 
 
 
 
 # Importing data
 
-It is quite possible, or perhaps even likely, that the computing environment in which you wish to *analyze* performance counter data is very different from the one which will *produce* it.  Recall that the **pbdPAPI** package must run under a Linux environment, where you may not wish to deal with the headache of installing all of the dependencies of **hpcvis** (notably, **ggplot2**).
+It is quite possible, or perhaps even likely, that the computing environment in which you wish to *analyze* performance counter data is very different from the one which will *produce* it.  This is especially true for the **pbdPAPI** package, which must run in a Linux environment.  See the discussion in the *Introducting hpcvis* vignette for more information. 
+
+To facilitate this process, the **pbdPAPI** package offers the utility `papiexport()`, which allows one to quickly export the profiling results.  For example, say you have the object `x` defined as:
 
 ```r
 x <- system.cache(rnorm(1e4))
@@ -55,6 +52,8 @@ x
 ## L2 Cache Misses: 6910
 ## L3 Cache Misses: 3526 
 ```
+
+We can export this easily as follows:
 
 ```r
 papiexport(x)
@@ -65,15 +64,28 @@ papiexport(x)
 ## "papi_cache"), call = "rnorm(10000)")
 ```
 
-or even to a file
+We can even export this directly to a file if we prefer:
 
 ```r
-dump("x", "/path/to/myfile")
+papiexport(x, "/path/to/myfile")
+```
+
+And in fact, any number of objects can be passed to `papiexport()`.  So if you have objects `x`, `y`, and `z`:
+
+```r
+# to the R console
+papiexport(x, y, z)
+# to a file
+papiexport(x, y, z, "/path/to/myfile")
 ```
 
 
 
-# Hardware Profiler Data
+
+
+# Plotting Counter Data
+
+Before proceeding, let us load some sample data.  We will use some data generated from the `system.cache()` function, profiling cache misses of R's random normal generator. 
 
 ```{r}
 library(hpcvis)
@@ -81,54 +93,106 @@ file <- system.file("testdata/cache_misses.Rda", package="hpcvis")
 load(file)
 ```
 
-This loads three objects named `cm_1e4`, `cm_5e4`, and `cm_1e5`.
+This loads three objects named `cm_1e4`, `cm_5e4`, and `cm_1e5`.  These show the measured cache misses (levels 1-3) of the random normal generator for R, executed on a fourth generation Intel Core i5 processor.  The subscripts denote the length of the output vector, i.e., the total number of random normal numbers generated.  So `cm_1e4` contains the cache misses of the execution of the command `rnorm(1e4)`.
 
-```{r, echo=TRUE, eval=TRUE}
-cm_1e4
-```
 
+## Basic Usage
+
+Let us being by displaying a plot of the length-1000 vector by invoking the `papiplot()` function:
 
 ```{r, echo=TRUE, eval=TRUE}
 papiplot(cm_1e4)
 ```
 
+If we pass multiple object, say all 3 of the aforementioned, then `papiplot()` will automatically handle plotting the three simultaneously on the same axis:
 
 ```{r, echo=TRUE, eval=TRUE}
 papiplot(cm_1e4, cm_5e4, cm_1e5)
 ```
 
 
+## Titles and labels
+
+If we so desire, we can easily control what names are displayed in the plots.  One example is the title of the plot.  By default, a title for the plot is provided based on the input type.  We can change it by passing a string, say `title="My Plot"`.  Or if we wish to have no title at all, we can pass `title=NULL`:
+
+```{r}
+papiplot(cm_1e4, cm_5e4, cm_1e5, title=NULL)
+```
+
+Similarly, we can control the displayed names of the operations.  So for example, we can replace the explict names (which are captured automatically) of `rnorm(1e4)`, etc, by say "small", "medium", and "large":
+
+```{r}
+opnames <- c("small", "medium", "large")
+papiplot(cm_1e4, cm_5e4, cm_1e5, opnames=opnames)
+```
+
+Or we can remove the operation names entirely (note, this is probably a bad idea unless you are only plotting one operation):
+
+```{r}
+papiplot(cm_1e4, opnames=NULL, title="Cache Misses for rnorm(1e4)")
+```
+
+Finally, if we so desire, we can place the numeric value of each bar at the top of the bar:
 
 ```{r, echo=TRUE, eval=TRUE}
-papiplot(cm_1e4, cm_5e4, cm_1e5, color=TRUE, opnames=NULL)
+papiplot(cm_1e4, cm_5e4, cm_1e5, bar.label=TRUE)
+```
+
+This is perhaps not useful and not generally recommended, but some journals prefer this style, and so we include the option.
+
+
+## Group Options
+
+If we prefer, we can color the bars by group by simply adding `color=TRUE` to our `papiplot()` command:
+
+```{r}
+papiplot(cm_1e4, cm_5e4, cm_1e5, color=TRUE) 
+```
+
+Coloring bars is perhaps more useful with another option.  We can change how we split the plot, either by the given operation (the default) or by the cache level:
+
+```{r, echo=TRUE, eval=TRUE}
+papiplot(cm_1e4, cm_5e4, cm_1e5, color=TRUE, facet.by="level")
+```
+
+Here the `label.angle` and `opnames` options can be handy:
+
+```{r, echo=TRUE, eval=TRUE}
+papiplot(cm_1e4, cm_5e4, cm_1e5, color=TRUE, facet.by="level", label.angle=15, opnames=opnames)
 ```
 
 
+## Final Note
 
-```{r, echo=TRUE, eval=TRUE}
-papiplot(cm_1e4, cm_5e4, cm_1e5, facet.by="level", label.angle=20) 
-```
+The return of `papiplot()` is a **ggplot2** compatible plot, and so all of the options and tools available for such plots (which are numerous) apply. 
 
-
-```{r, echo=TRUE, eval=TRUE}
-papiplot(cm_1e4, cm_5e4, cm_1e5, color=TRUE, facet.by="level", label.angle=20)
-```
 
 
 
 
 # Benchmark Plotters
 
-```{r, echo=TRUE, eval=TRUE}
-library(hpcvis)
+Later versions of **pbdPAPI** include some "benchmarker" utilities, which automatically handle the multiple evaluation of functions.  For example, it has the function `cachebench()`, which will generate multiple iterations (by default 10) of each provided function, and track the cache misses as measured by `system.cache()`.
+
+We again by loading some example data.  The data measures cache misses from the same processes as in the example above, but with 10 iterations for each operation.
+
+```{r}
 file <- system.file("testdata/cachebench.Rda", package="hpcvis")
 load(file)
 ```
 
-```{r, echo=TRUE, eval=TRUE}
+The same function `papiplot()` applied to this object will produce a set of box-and-whiskers plots, displaying the variation in function execution:
+
+```{r}
 papiplot(rnorm_cachebench)
+```
+
+As before, the optional function arguments apply:
+
+```{r}
 papiplot(rnorm_cachebench, facet.by="operation", label.angle=15)
 ```
+
 
 
 
